# flood-area-segmentation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: infer.yaml  train.yaml
configs/datamodule/: flood_data.yaml
configs/logger/: mlflow.yaml
configs/model/: mobilenet_unet.yaml  resnet34_unet.yaml
data/: raw.dvc
flood_area_segmentation/: __init__.py  commands.py
flood_area_segmentation/callbacks/: __init__.py  plots_drawer.py
flood_area_segmentation/cli_impl/: __init__.py  convert.py  infer.py  train.py  triton_client.py  triton_server.py
flood_area_segmentation/data/: datamodule.py
flood_area_segmentation/models/: __init__.py  unet.py
flood_area_segmentation/production/: __init__.py
models/: .gitignore  mobilenet_unet.dvc  resnet34_unet.dvc
tests/: __init__.py  conftest.py  test_config.py  test_datamodule.py  test_model_output.py  test_onnx_conversion.py  test_postprocessing.py  test_preprocessing.py
triton_model_repository/: .gitignore
triton_model_repository/flood_area_segmentation/: config_onnx.pbtxt  config_trt.pbtxt
triton_model_repository/flood_segmentation/: config_onnx.pbtxt  config_trt.pbtxt
